crates/sith_python_parser/tests/snapshots/invalid_syntax@return_stmt_invalid_expr.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/return_stmt_invalid_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..74,
        body: [
            Return(
                ReturnStmt {
                    range: 0..8,
                    value: Some(
                        Starred(
                            StarredExpr {
                                range: 7..8,
                                value: Name(
                                    NameExpr {
                                        range: 8..8,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
            Return(
                ReturnStmt {
                    range: 9..23,
                    value: Some(
                        Yield(
                            YieldExpr {
                                range: 16..23,
                                value: Some(
                                    Name(
                                        NameExpr {
                                            range: 22..23,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
            Return(
                ReturnStmt {
                    range: 24..43,
                    value: Some(
                        YieldFrom(
                            YieldFromExpr {
                                range: 31..43,
                                value: Name(
                                    NameExpr {
                                        range: 42..43,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ),
                },
            ),
            Return(
                ReturnStmt {
                    range: 44..52,
                    value: Some(
                        Name(
                            NameExpr {
                                range: 51..52,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 56..57,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 56..57,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Return(
                ReturnStmt {
                    range: 58..73,
                    value: Some(
                        Starred(
                            StarredExpr {
                                range: 65..73,
                                value: BoolOp(
                                    BoolOpExpr {
                                        range: 66..73,
                                        op: And,
                                        values: [
                                            Name(
                                                NameExpr {
                                                    range: 66..67,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            Name(
                                                NameExpr {
                                                    range: 72..73,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | return *
  |         ^ Syntax Error: Expected an expression
2 | return yield x
3 | return yield from x
4 | return x := 1
  |


  |
1 | return *
2 | return yield x
  |        ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | return yield from x
4 | return x := 1
  |


  |
1 | return *
2 | return yield x
3 | return yield from x
  |        ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | return x := 1
5 | return *x and y
  |


  |
2 | return yield x
3 | return yield from x
4 | return x := 1
  |          ^^ Syntax Error: Expected a statement
5 | return *x and y
  |


  |
3 | return yield from x
4 | return x := 1
5 | return *x and y
  |         ^^^^^^^ Syntax Error: Boolean expression cannot be used here
  |
