crates/sith_python_parser/tests/snapshots/invalid_syntax@try_stmt_invalid_order.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/try_stmt_invalid_order.py
---
## AST

```
Module(
    ModModule {
        range: 0..47,
        body: [
            Try(
                TryStmt {
                    range: 0..31,
                    body: [
                        Pass(
                            PassStmt {
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [],
                    orelse: [],
                    finalbody: [
                        Pass(
                            PassStmt {
                                range: 27..31,
                            },
                        ),
                    ],
                    is_star: false,
                },
            ),
            Pass(
                PassStmt {
                    range: 42..46,
                },
            ),
        ],
    },
)
```
## Errors

  |
3 | finally:
4 |     pass
5 | else:
  | ^^^^ Syntax Error: `else` block must come before `finally` block
6 |     pass
  |


  |
3 | finally:
4 |     pass
5 | else:
  |     ^ Syntax Error: Expected a statement
6 |     pass
  |


  |
3 | finally:
4 |     pass
5 | else:
  |      ^ Syntax Error: Expected a statement
6 |     pass
  |


  |
4 |     pass
5 | else:
6 |     pass
  | ^^^^ Syntax Error: Unexpected indentation
  |


  |
5 | else:
6 |     pass
  |
